# Production-grade-cloud-project

./: .clang-format  .editorconfig  .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  DEPLOYMENT.md  README.md  SECURITY.md  TRACKER.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: deploy.yml
apps/c/: .dockerignore  Dockerfile  Makefile
apps/c/src/: access_log.c  access_log.h  auth.c  auth.h  cache.c  cache.h  db.c  db.h  handlers.c  handlers.h  main.c
apps/c/tests/: test_handlers.c
apps/cpp/: .dockerignore  CMakeLists.txt  Dockerfile
apps/cpp/src/: access_log.cpp  access_log.hpp  auth.cpp  auth.hpp  cache.cpp  cache.hpp  config.hpp  db.cpp  db.hpp  handlers.cpp  handlers.hpp  main.cpp
apps/cpp/tests/: test_handlers.cpp
apps/js/: .dockerignore  .eslintrc.json  Dockerfile  package-lock.json  package.json
apps/js/src/: access_log.js  app.js  auth.js  cache.js  db.js  server.js
apps/js/tests/: integration.test.js  unit.test.js
apps/migrator/: Dockerfile
apps/python/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
apps/python/app/: __init__.py  access_log.py  auth.py  cache.py  config.py  db.py  main.py
apps/python/tests/: conftest.py  test_integration.py  test_unit.py
benchmark/: chaos_test.sh  run_c.sh  run_compare.sh  run_cpp.sh  run_js.sh  run_python.sh  run_tests.sh
db/: entrypoint.sh  init.sql  migrate.sh
db/migrations/: V001__init.sql  V002__users.sql
security/: .trivyignore
terraform/environments/prod/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/alb/: main.tf  (+2 more)
terraform/scripts/: bootstrap-deploy.sh  setup-backend.sh
(+26 files in other folders)
